modified:   Log.cpp modified:   Log.h modified:   MyService.cpp modified:   README modified:   main.h modified:   pgdb.cpp modified:   pgdb.h
此次修改后可以在windows上编译通过运行
ps:上次提交时没有任何东西，因为没有执行git add .就直接git commit了
版本：v2.0.04
作者：王鹤楼
日期：2015/01/27

--- a/README
+++ b/README
@@ -5,3 +5,11 @@ booståº“ï¼š
 /lib/libboost_thread-mt.so.1.49.0
 æ—¥å¿—åº“:
 liblog4cplus.so.2.0.0
+
+=====================================
+Ê¹ÓÃlog4cplusÈÕÖ¾²ú¿âºó£¬winddowsÆ½Ì¨:
+1¡¢ÔÚvs2005¹¤³ÌÊôÐÔÖÐ£ºÅäÖÃÊôÐÔ-->Á´½ÓÆ÷-->ÊäÈë-->¸½¼ÓÒÀÀµÏî£¬ÖÐÌí¼Ólog4cplus.lib
+2¡¢ÔÚvs2005¹¤³ÌÊôÐÔÖÐ£ºÅäÖÃÊôÐÔ-->Á´½ÓÆ÷-->³£¹æ-->³£¹æ-->¸½¼ÓÄ¿Â¼£¬ÖÐÌí¼Ólog4cplusµÄ¿âµÄÂ·¾¶
+3¡¢ÔÚvs2005¹¤³ÌÊôÐÔÖÐ£ºÅäÖÃÊôÐÔ-->C/C++-->³£¹æ-->¸½¼Ó°üº¬Ä¿Â¼ÖÐÌí¼Ólog4cplusµÄÍ·¼þÂ·¾¶
+4¡¢ÔÚvs2005¹¤³ÌÊôÐÔÖÐ£ºÅäÖÃÊôÐÔ-->C/C++-->Ô¤´¦ÀíÆ÷-->Ô¤´¦ÀíÆ÷¶¨ÒåÖÐÌí¼Ó£ºWIN32¡¢
+WIN32_LEAN_AND_MEANÁ½¸öºê
